--- a/Political_Affiliation_NupurYadav(2).ipynb
+++ b/Political_Affiliation_NupurYadav(2).ipynb
@@ -103,12 +103,13 @@
         "    *  Democrat\n",
         "    *  Republican\n",
         "    *  No-affiliation and Other as Other\n",
-        "    \n",
+        "\n",
+        "6.  Perform LDA on all three datasets and added LDA score to liar liar dataset.  \n",
         "6. Create corpus of text by combining all the three datasets\n",
         "7. Create Doc2Vec embeddings (length = 10) using genism for each tagged document\n",
         "8. Feature Engineering : Use the generated doc2vec embeddings directly as features alongwith other categorical features such as state_info, speaker_job_title, context\n",
         "9. Train a neural network on the above features which is using softmax and predicting a vector, which comprises the probability scores for each party affliation.\n",
-        "10. Use the probability scores generated to train several multiclass classification models (such as Logistic Regression, DecisionTreeClassifier, GaussianNB, XGBClassifier, RandomForestClassifier, SVC and KNeighborsClassifier) **to predict the fakeness of the given statement between 1-6 with 1 being true and 6 being pants-fire.**\n",
+        "10. Use the probability scores generated alongwith the LDA score added to train several multiclass classification models (such as Logistic Regression, DecisionTreeClassifier, GaussianNB, XGBClassifier, RandomForestClassifier, SVC and KNeighborsClassifier) **to predict the fakeness of the given statement between 1-6 with 1 being true and 6 being pants-fire.**\n",
         "11. Use the best model to predict fakeness of a statement or news."
       ]
     },
