--- a/Topic_Modeling_Visualizations_for_Alternus_Vera.ipynb
+++ b/Topic_Modeling_Visualizations_for_Alternus_Vera.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Topic_Modeling_Visualizations_for_Alternus_Vera.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/nupursjsu/AlternusVera/blob/master/Topic_Modeling_Visualizations_for_Alternus_Vera.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
