--- a/Stance_To_Fakeness.ipynb
+++ b/Stance_To_Fakeness.ipynb
@@ -1944,271 +1944,16 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "JbbYZe3OocBT",
-        "colab_type": "code",
-        "outputId": "1e2eb2ce-6fed-4035-bf4c-525c469b7f6c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 364
-        }
+        "id": "cSH5nb5C32yb",
+        "colab_type": "text"
       },
       "source": [
-        "import random\n",
-        "random.seed(1)\n",
-        "!pip install -q git+https://github.com/tensorflow/docs\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "import pandas as pd\n",
-        "import pydot\n",
-        "import keras\n",
-        "import tensorflow as tf\n",
-        "from tensorflow.keras import layers\n",
-        "import tensorflow_docs as tfdocs\n",
-        "import tensorflow_docs.plots\n",
-        "import tensorflow_docs.modeling\n",
-        "import pathlib\n",
+        "# Conclusion\n",
         "\n",
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "import seaborn as sns\n",
-        "tf.random.set_seed(1)\n",
-        "\n",
-        "!pip install git+git://github.com/keras-team/keras.git --upgrade --no-deps"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "  Building wheel for tensorflow-docs (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting git+git://github.com/keras-team/keras.git\n",
-            "  Cloning git://github.com/keras-team/keras.git to /tmp/pip-req-build-uh7zp994\n",
-            "  Running command git clone -q git://github.com/keras-team/keras.git /tmp/pip-req-build-uh7zp994\n",
-            "Building wheels for collected packages: Keras\n",
-            "  Building wheel for Keras (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for Keras: filename=Keras-2.3.1-cp36-none-any.whl size=365124 sha256=85c578bc23c5ebfa2821753f276a57972d2500bdd7281e4c9ad95e93400b3827\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-9y6r0w4a/wheels/e6/02/ad/5e8e1a5824af71082e2260fe7e2eaa1b745c34706e6ff0a14b\n",
-            "Successfully built Keras\n",
-            "Installing collected packages: Keras\n",
-            "  Found existing installation: Keras 2.3.1\n",
-            "    Uninstalling Keras-2.3.1:\n",
-            "      Successfully uninstalled Keras-2.3.1\n",
-            "Successfully installed Keras-2.3.1\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.colab-display-data+json": {
-              "pip_warning": {
-                "packages": [
-                  "keras"
-                ]
-              }
-            }
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "Following figure shows the different multiclass classifications models trained to model stance factor and predict fakeness of statement using that factor. As, you can see **XG boost gave the highest accuracy of approx. 43% which is used in the final combined model.**"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hQ-qIyA1oceY",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "df=liar_clean\n",
-        "X=df.loc[:,df.columns!='label_code']\n",
-        "Y=df.loc[:,df.columns=='label_code']\n",
-        "train_dataset, X_test, y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=1)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kMTd4T_5oogh",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from keras.layers import Dense,Dropout, Flatten\n",
-        "def build_model():\n",
-        "\n",
-        "  # model = tensorflow.keras.Sequential()\n",
-        "  model = tf.keras.Sequential([\n",
-        "    layers.Dense(64, activation='relu', input_shape=[len(train_dataset.keys())]),\n",
-        "    layers.Dense(64, activation='relu'),\n",
-        "    layers.Dense(1,activation='sigmoid')\n",
-        "  ])\n",
-        "\n",
-        "  # optimizer = tf.keras.optimizers.RMSprop(0.001)\n",
-        "\n",
-        "  model.compile(loss='mse',\n",
-        "                # optimizer=optimizer,\n",
-        "                metrics=['mae', 'mse'])\n",
-        "  return model"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qvTjMmnKouaa",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "model=build_model()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9SjuRWXuoxWD",
-        "colab_type": "code",
-        "outputId": "6735ecff-312e-4937-e9ae-874f4b414ebc",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 69
-        }
-      },
-      "source": [
-        "EPOCHS = 100\n",
-        "\n",
-        "history = model.fit(\n",
-        "  train_dataset, y_train,\n",
-        "  epochs=EPOCHS, validation_split = 0.2, verbose=0,\n",
-        "  callbacks=[tfdocs.modeling.EpochDots()])"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "Epoch: 0, loss:4.5283,  mae:1.6608,  mse:4.5283,  val_loss:4.4808,  val_mae:1.6547,  val_mse:4.4808,  \n",
-            "...................................................................................................."
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6jqrAhy9sCpk",
-        "colab_type": "code",
-        "outputId": "b25812c4-3896-4f7e-f1a3-80224acbe59b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 138
-        }
-      },
-      "source": [
-        "model.predict(X_test)\n"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[1.],\n",
-              "       [1.],\n",
-              "       [1.],\n",
-              "       ...,\n",
-              "       [1.],\n",
-              "       [1.],\n",
-              "       [1.]], dtype=float32)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 36
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XeK9XEH3tRhK",
-        "colab_type": "code",
-        "outputId": "6be54a85-25b3-4a9c-bc50-0c5296023f41",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 184
-        }
-      },
-      "source": [
-        "tf.cast(tf.equal(test_predictions, Y_test), dtype=tf.float32)\n",
-        "# accuracy_score(Y_test, test_predictions,normalize=True, sample_weight=None)*100"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-37-b67c710d74a9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcast\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mequal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_predictions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# accuracy_score(Y_test, test_predictions,normalize=True, sample_weight=None)*100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'test_predictions' is not defined"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "F9RtLF43t25f",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Bn_4njU1t9yv",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
