--- a/Political_Affiliation_NupurYadav(2).ipynb
+++ b/Political_Affiliation_NupurYadav(2).ipynb
@@ -172,7 +172,7 @@
         "from fastai import *\n",
         "from fastai.tabular import *\n"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,7 +332,7 @@
         "liar=pd.concat([liar_train,liar_test])\n",
         "liar.head(2)\n"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -465,7 +465,7 @@
         "\n",
         "liar.head(2)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -579,7 +579,7 @@
         "plt.axis(\"off\")\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -611,7 +611,7 @@
         "#looking at the distribution of party affiliation in the liar dataset\n",
         "liar.affiliation.value_counts().plot(kind='bar')"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -685,7 +685,7 @@
       "source": [
         "liar.affiliation.value_counts().plot(kind='bar')"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -797,7 +797,7 @@
         "print(\"Topics found via LDA:\")\n",
         "print_topics(lda, count_vectorizer, number_words)"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -941,18 +941,18 @@
       "metadata": {
         "id": "AoxbnBB9RshX",
         "colab_type": "code",
+        "outputId": "0c9f61a0-7b42-4043-cc71-ab54bc9fee04",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 377
-        },
-        "outputId": "0c9f61a0-7b42-4043-cc71-ab54bc9fee04"
+        }
       },
       "source": [
         "# Checking the topics and words\n",
         "for idx, topic in lda_model.print_topics(-1):\n",
         "    print('Topic: {} \\nWords: {}'.format(idx, topic))"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -987,18 +987,18 @@
       "metadata": {
         "id": "FBeF1H0CR1_0",
         "colab_type": "code",
+        "outputId": "1a3af9b2-9b80-4404-dac9-b5507c1d9e14",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 547
-        },
-        "outputId": "1a3af9b2-9b80-4404-dac9-b5507c1d9e14"
+        }
       },
       "source": [
         "# Getting score\n",
         "for index, score in sorted(lda_model[bow_corpus[4310]], key=lambda tup: -1*tup[1]):\n",
         "    print(\"\\nScore: {}\\t \\nTopic: {}\".format(score, lda_model.print_topic(index, 10)))"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1056,16 +1056,16 @@
       "metadata": {
         "id": "QhaL7z0ER_P_",
         "colab_type": "code",
+        "outputId": "704caf4a-db0a-4ebd-caea-47952d985e69",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 802
-        },
-        "outputId": "704caf4a-db0a-4ebd-caea-47952d985e69"
+        }
       },
       "source": [
         "liar.head()"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1266,7 +1266,7 @@
         "# Visualise the 10 most common words\n",
         "plot_10_most_common_words(count_data, count_vectorizer)"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1332,7 +1332,7 @@
       "source": [
         "fake_df.head(2)"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1439,7 +1439,7 @@
       "source": [
         "fake_df.head(2)"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1520,7 +1520,7 @@
         "plt.axis(\"off\")\n",
         "plt.show()"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1597,7 +1597,7 @@
         "print(\"Topics found via LDA:\")\n",
         "print_topics(lda, count_vectorizer, number_words)"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1685,7 +1685,7 @@
         "# Visualise the 10 most common words\n",
         "plot_10_most_common_words(count_data, count_vectorizer)"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1743,7 +1743,7 @@
         "df_politifact = df_politifact.drop(columns=['text', 'subject', 'date'])\n",
         "df_politifact.head()"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1870,7 +1870,7 @@
       "source": [
         "df_politifact.head()"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1964,7 +1964,7 @@
         "plt.axis(\"off\")\n",
         "plt.show()"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2041,7 +2041,7 @@
         "print(\"Topics found via LDA:\")\n",
         "print_topics(lda, count_vectorizer, number_words)"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2129,7 +2129,7 @@
         "# Visualise the 10 most common words\n",
         "plot_10_most_common_words(count_data, count_vectorizer)"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2203,7 +2203,7 @@
         "\n",
         "tagged_data[0]\n"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2258,7 +2258,7 @@
         "    d2v_model.alpha -= 0.0002\n",
         "    d2v_model.min_alpha = d2v_model.alpha\n"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2295,7 +2295,7 @@
         "d2v_model.save(\"doc2vec1.model\")\n",
         "print(\"Doc2Vec Model Saved\")"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2324,7 +2324,7 @@
         "test_ex= [d2vmodel.infer_vector(word_tokenize(text))]\n",
         "print(test_ex)"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2409,7 +2409,7 @@
         "#Displaying training data for Neural network\n",
         "df.tail(5)"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2572,7 +2572,7 @@
         "#Displaying party affiliation dustribution across the training dataset\n",
         "df.party_affiliation.value_counts().plot(kind='bar')#(10)"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2628,7 +2628,7 @@
         "\n",
         "len(train_df), len(test_df)"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2738,7 +2738,7 @@
         "                   .databunch())\n",
         "data.show_batch(rows=10)"
       ],
-      "execution_count": 56,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2966,7 +2966,7 @@
         "#displaying the model parameters\n",
         "learn.model"
       ],
-      "execution_count": 58,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3020,7 +3020,7 @@
         "learn.save(\"NN_model\")\n",
         "learn.export()"
       ],
-      "execution_count": 59,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3132,7 +3132,7 @@
         "learn.lr_find()\n",
         "learn.recorder.plot()"
       ],
-      "execution_count": 60,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3234,7 +3234,7 @@
         "pred = ClassificationInterpretation.from_learner(learn)\n",
         "pred.plot_confusion_matrix()"
       ],
-      "execution_count": 61,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3280,7 +3280,7 @@
         "#Displaying the prediction for one of the test record\n",
         "print(test_df.iloc[0],str(learn.predict(test_df.iloc[0])))"
       ],
-      "execution_count": 62,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3352,7 +3352,7 @@
         "df_final.columns = ['Embed_0', 'Embed_1', 'Embed_2', 'Embed_3', 'Embed_4', 'Embed_5', 'Embed_6', 'Embed_7','Embed_8', 'Embed_9','speaker_job_title','state_info','context']\n",
         "df_final.head()"
       ],
-      "execution_count": 63,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3555,7 +3555,7 @@
         "final_df.columns = columns\n",
         "final_df.head()"
       ],
-      "execution_count": 66,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3662,7 +3662,7 @@
         "#looking at the distribution of fakeness class labels in the liar dataset\n",
         "final_df.label.value_counts().plot(kind='bar')"
       ],
-      "execution_count": 67,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3835,7 +3835,7 @@
       "source": [
         "final_df.head()"
       ],
-      "execution_count": 72,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4038,7 +4038,7 @@
         "#Training different models and evaluating them\n",
         "fitModelsAndPredict(models_dict,X_train,Y_train,X_test,Y_test)"
       ],
-      "execution_count": 78,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -4251,7 +4251,7 @@
       "source": [
         "# **Conclusion**\n",
         "\n",
-        "I have modeled party affiliation factor to check the fakeness of news or statement between 1-6 and the SVM model is giving a highest accuracy of approx 22% in case of multiclass classification. Whereas in case of binary classification Logistic Regression was giving an accuracy of 56% during iteration 1.\n",
+        "I have modeled party affiliation factor to check the fakeness of news or statement between 1-6 and the **SVM model is giving a highest accuracy of approx 22% in case of multiclass classification.** Whereas in case of binary classification Logistic Regression was giving an accuracy of 56% during iteration 1.\n",
         "\n",
         "Below is the summary of things that I tried during various iteration processes and the accuracies I achieved by applying those.\n",
         "\n",
