--- a/LokiFinalSprint4AV.ipynb
+++ b/LokiFinalSprint4AV.ipynb
@@ -6,7 +6,6 @@
       "name": "LokiFinalSprint4AV.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6155,7 +6154,7 @@
         "colab_type": "text"
       },
       "source": [
-        "As you can see, Xgb model gave the highest accuracy"
+        "**As you can see, Xgb model gave the highest accuracy of 43%.**"
       ]
     },
     {
