--- a/FourReal_AV_FinalCombinedModel.ipynb
+++ b/FourReal_AV_FinalCombinedModel.ipynb
@@ -119,7 +119,7 @@
       "metadata": {
         "id": "ctJLpDlXjrYL",
         "colab_type": "code",
-        "outputId": "11e6d6ec-bdab-44cf-c362-277fcbc18c3f",
+        "outputId": "859695b1-e8b6-4528-f499-f56556762884",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 649
@@ -180,7 +180,7 @@
         "\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 1,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,46 +188,34 @@
             "Requirement already satisfied: nltk in /usr/local/lib/python3.6/dist-packages (3.2.5)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from nltk) (1.12.0)\n",
             "Requirement already satisfied: gensim in /usr/local/lib/python3.6/dist-packages (3.6.0)\n",
-            "Requirement already satisfied: six>=1.5.0 in /usr/local/lib/python3.6/dist-packages (from gensim) (1.12.0)\n",
             "Requirement already satisfied: scipy>=0.18.1 in /usr/local/lib/python3.6/dist-packages (from gensim) (1.4.1)\n",
-            "Requirement already satisfied: numpy>=1.11.3 in /usr/local/lib/python3.6/dist-packages (from gensim) (1.18.4)\n",
             "Requirement already satisfied: smart-open>=1.2.1 in /usr/local/lib/python3.6/dist-packages (from gensim) (2.0.0)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from smart-open>=1.2.1->gensim) (2.23.0)\n",
+            "Requirement already satisfied: six>=1.5.0 in /usr/local/lib/python3.6/dist-packages (from gensim) (1.12.0)\n",
+            "Requirement already satisfied: numpy>=1.11.3 in /usr/local/lib/python3.6/dist-packages (from gensim) (1.18.4)\n",
             "Requirement already satisfied: boto3 in /usr/local/lib/python3.6/dist-packages (from smart-open>=1.2.1->gensim) (1.13.4)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from smart-open>=1.2.1->gensim) (2.23.0)\n",
             "Requirement already satisfied: boto in /usr/local/lib/python3.6/dist-packages (from smart-open>=1.2.1->gensim) (2.49.0)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->smart-open>=1.2.1->gensim) (2.9)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->smart-open>=1.2.1->gensim) (3.0.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->smart-open>=1.2.1->gensim) (2020.4.5.1)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->smart-open>=1.2.1->gensim) (1.24.3)\n",
             "Requirement already satisfied: botocore<1.17.0,>=1.16.4 in /usr/local/lib/python3.6/dist-packages (from boto3->smart-open>=1.2.1->gensim) (1.16.4)\n",
             "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in /usr/local/lib/python3.6/dist-packages (from boto3->smart-open>=1.2.1->gensim) (0.9.5)\n",
             "Requirement already satisfied: s3transfer<0.4.0,>=0.3.0 in /usr/local/lib/python3.6/dist-packages (from boto3->smart-open>=1.2.1->gensim) (0.3.3)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->smart-open>=1.2.1->gensim) (1.24.3)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->smart-open>=1.2.1->gensim) (2.9)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->smart-open>=1.2.1->gensim) (2020.4.5.1)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->smart-open>=1.2.1->gensim) (3.0.4)\n",
             "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /usr/local/lib/python3.6/dist-packages (from botocore<1.17.0,>=1.16.4->boto3->smart-open>=1.2.1->gensim) (2.8.1)\n",
             "Requirement already satisfied: docutils<0.16,>=0.10 in /usr/local/lib/python3.6/dist-packages (from botocore<1.17.0,>=1.16.4->boto3->smart-open>=1.2.1->gensim) (0.15.2)\n",
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
             "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/wordnet.zip.\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n",
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
             "[nltk_data]   Package stopwords is already up-to-date!\n",
             "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
             "[nltk_data]     /root/nltk_data...\n",
-            "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n",
+            "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+            "[nltk_data]       date!\n",
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
             "[nltk_data]   Package punkt is already up-to-date!\n",
             "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
@@ -350,7 +338,7 @@
       "metadata": {
         "id": "AJ_MWuFjrvdR",
         "colab_type": "code",
-        "outputId": "a01a265b-c71c-4067-da06-42117dd813dd",
+        "outputId": "f198c335-120a-45cb-c87e-917ac9e6c54e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -359,7 +347,7 @@
       "source": [
         "print(FourReal_getPartyAffiliationScore(\"Says the Annies List political group supports third-trimester abortions on demand\", \"State representative\",\t\"Texas\", \"a mailer\"))"
       ],
-      "execution_count": 4,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -628,26 +616,17 @@
       "metadata": {
         "id": "z4V6Dg1iThRi",
         "colab_type": "code",
-        "outputId": "2e7b4df0-2226-4795-d8e3-f595403d43ae",
+        "outputId": "22be2d7d-37e4-4676-d8b6-5923a5ddeb83",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 34
         }
       },
       "source": [
         "FourReal_getNetwordBasedScore(\"Says the Annies List political group supports third-trimester abortions on demand.\")"
       ],
-      "execution_count": 11,
+      "execution_count": 39,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From <ipython-input-10-385523f7017c>:15: Sequential.predict_classes (from tensorflow.python.keras.engine.sequential) is deprecated and will be removed after 2021-01-01.\n",
-            "Instructions for updating:\n",
-            "Please use instead:* `np.argmax(model.predict(x), axis=-1)`,   if your model does multi-class classification   (e.g. if it uses a `softmax` last-layer activation).* `(model.predict(x) > 0.5).astype(\"int32\")`,   if your model does binary classification   (e.g. if it uses a `sigmoid` last-layer activation).\n"
-          ],
-          "name": "stdout"
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -658,7 +637,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 39
         }
       ]
     },
@@ -677,10 +656,10 @@
       "metadata": {
         "id": "r4iva8bwWZ6_",
         "colab_type": "code",
-        "outputId": "66a5212c-5701-4bf5-8b64-f241bfb9dfd1",
+        "outputId": "0c7247f5-f793-4083-b790-013368d16562",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 170
+          "height": 187
         }
       },
       "source": [
@@ -706,7 +685,7 @@
         "from nltk.tokenize import word_tokenize\n",
         "import pandas as pd"
       ],
-      "execution_count": 12,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -714,6 +693,7 @@
             "Requirement already satisfied: nltk in /usr/local/lib/python3.6/dist-packages (3.2.5)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from nltk) (1.12.0)\n",
             "[nltk_data] Downloading package vader_lexicon to /root/nltk_data...\n",
+            "[nltk_data]   Package vader_lexicon is already up-to-date!\n",
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
             "[nltk_data]   Package punkt is already up-to-date!\n",
             "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
@@ -916,7 +896,7 @@
       "metadata": {
         "id": "-wrbVIpuZsLt",
         "colab_type": "code",
-        "outputId": "f4674a60-afe5-4f1c-da97-8aefbf9fed25",
+        "outputId": "e315aa6d-2eec-40ce-b8dc-ddcea36ab2b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -925,7 +905,7 @@
       "source": [
         "print(FourReal_getStanceScore('i am awsome',10,10,10,10, 10,'dwayne-bohac','Virginia','State representative'))"
       ],
-      "execution_count": 22,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -945,7 +925,7 @@
       "source": [
         "#**Final Combined Model**\n",
         "\n",
-        "**Since we are doing a multiclass classification, each of our individual models are generating six probabilities scores for 1 to 6 (1 being true and 6 being pants-fire) class labels and then we are doing a weighted average for every probability and at last returning the max probability with the corresponsing index denoting a label from 1-6 (here indices from 0 to 5).**"
+        "**Since, we are doing a multiclass classification, each of our individual models are generating six probabilities scores for 1 to 6 (1 being true and 6 being pants-fire) class labels and then we are doing a weighted average for every probability and at last returning the max probability with the corresponding index denoting a label from 1-6 (here indices from 0 to 5).**"
       ]
     },
     {
@@ -957,7 +937,7 @@
       },
       "source": [
         "def isFakeNews(statement,subject,speaker_job_title,state_info,context,barely_true_counts,false_counts,half_true_counts,mostly_true_counts, pants_on_fire_counts,speaker,party_affiliation):\n",
-        "  accur = [0.22,0.43,0.45,0.95] # using the (normalized) accuracy as weigths\n",
+        "  accur = [0.22,0.43,0.43,0.95] # using the (normalized) accuracy as weigths\n",
         "  w = [float(i)/sum(accur) for i in accur]\n",
         "  sumW = 0\n",
         "  prob = []\n",
@@ -995,7 +975,7 @@
       "metadata": {
         "id": "muLDeEJkb2dO",
         "colab_type": "code",
-        "outputId": "2975326f-0451-4304-faa3-19cff9688575",
+        "outputId": "d13db210-4e43-4965-9c6f-191de91f1e94",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1005,7 +985,7 @@
         "result = isFakeNews(\"Hillary Clinton agrees with John McCain by voting to give George Bush the benefit of the doubt on Iran\",\"foreign-policy\",\"President\",\"Illinois\",\"Denver\",70,71,160,163,9,'barack-obama','democrat')\n",
         "print(result)"
       ],
-      "execution_count": 28,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
